<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef">

<!--    <com.google.android.material.appbar.AppBarLayout-->
<!--        android:id="@+id/appbar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--        <androidx.appcompat.widget.Toolbar-->
<!--            android:id="@+id/toolbar"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="#ffffff">-->

<!--            <TextView-->
<!--                android:id="@+id/toolbar_text"-->
<!--                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:text="@string/text_logIn" />-->
<!--        </androidx.appcompat.widget.Toolbar>-->
<!--    </com.google.android.material.appbar.AppBarLayout>-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidLine1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidLine2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidLine3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autoSizeMaxTextSize="18sp"
        android:autoSizeMinTextSize="13sp"
        android:text="@string/text_login_guide"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_email"
        app:layout_constraintLeft_toLeftOf="@id/guidLine1"
        app:layout_constraintRight_toRightOf="@id/guidLine2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_email"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_email"
        app:layout_constraintLeft_toLeftOf="@id/guidLine1"
        app:layout_constraintTop_toTopOf="@+id/edit_email" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email_input"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_pw"
        app:layout_constraintLeft_toLeftOf="@+id/guidLine3"
        app:layout_constraintRight_toRightOf="@+id/guidLine2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/text_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_pw"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_pw"
        app:layout_constraintLeft_toLeftOf="@id/guidLine1"
        app:layout_constraintTop_toTopOf="@+id/edit_pw"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/edit_pw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_pw_input"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_logIn"
        app:layout_constraintLeft_toLeftOf="@+id/guidLine3"
        app:layout_constraintRight_toRightOf="@+id/guidLine2"
        app:layout_constraintTop_toBottomOf="@+id/edit_email" />

    <Button
        android:id="@+id/btn_logIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border_radius_base"
        android:text="@string/text_logIn"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_pw_find"
        app:layout_constraintLeft_toLeftOf="@id/guidLine1"
        app:layout_constraintRight_toRightOf="@+id/guidLine2"
        app:layout_constraintTop_toBottomOf="@+id/edit_pw"
        app:layout_constraintVertical_bias="0.45" />

    <TextView
        android:id="@+id/txt_pw_find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="비밀번호 찾기"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/line4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_logIn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>