<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data />
    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/sv_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:isScrollContainer="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#efefef"
            android:clickable="true"
            android:focusable="true">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidLine1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.07" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidLine2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.93" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidLine3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.35" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidLine4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidLine5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0" />

            <TextView
                android:id="@+id/text_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_email"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/text_pw"
                app:layout_constraintLeft_toLeftOf="@+id/guidLine1"
                app:layout_constraintTop_toTopOf="@+id/guidLine5"
                app:layout_constraintVertical_chainStyle="spread" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email_input"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/text_email"
                app:layout_constraintLeft_toLeftOf="@+id/guidLine3"
                app:layout_constraintRight_toRightOf="@+id/guidLine2"
                app:layout_constraintTop_toTopOf="@+id/text_email" />

            <TextView
                android:id="@+id/text_pw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_pw"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/text_pw_confirm"
                app:layout_constraintLeft_toLeftOf="@id/guidLine1"
                app:layout_constraintTop_toBottomOf="@+id/text_email"
                app:layout_constraintVertical_bias="0.3" />

            <EditText
                android:id="@+id/edit_pw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_pw_input"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/text_pw"
                app:layout_constraintLeft_toLeftOf="@+id/guidLine3"
                app:layout_constraintRight_toRightOf="@+id/guidLine2"
                app:layout_constraintTop_toTopOf="@+id/text_pw" />

            <TextView
                android:id="@+id/text_pw_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_pw_confirm"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/text_nickname"
                app:layout_constraintLeft_toLeftOf="@id/guidLine1"
                app:layout_constraintTop_toBottomOf="@+id/text_pw"
                app:layout_constraintVertical_bias="0.3" />

            <EditText
                android:id="@+id/edit_pw_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_pw_confirm_input"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/text_pw_confirm"
                app:layout_constraintLeft_toLeftOf="@+id/guidLine3"
                app:layout_constraintRight_toRightOf="@+id/guidLine2"
                app:layout_constraintTop_toTopOf="@+id/text_pw_confirm" />

            <TextView
                android:id="@+id/text_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_nickname"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/layout_accept"
                app:layout_constraintLeft_toLeftOf="@id/guidLine1"
                app:layout_constraintTop_toBottomOf="@+id/text_pw_confirm"
                app:layout_constraintVertical_bias="0.3" />

            <EditText
                android:id="@+id/edit_nickname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nickname_input"
                android:maxLines="1"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/text_nickname"
                app:layout_constraintLeft_toLeftOf="@+id/guidLine3"
                app:layout_constraintRight_toRightOf="@+id/guidLine2"
                app:layout_constraintTop_toTopOf="@+id/text_nickname" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_accept"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/input_border"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_signUp"
                app:layout_constraintHeight_percent="0.30"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintLeft_toLeftOf="@+id/guidLine1"
                app:layout_constraintRight_toRightOf="@+id/guidLine2"
                app:layout_constraintTop_toBottomOf="@+id/text_nickname">

                <CheckBox
                    android:id="@+id/allCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-100dp"
                    android:button="@drawable/check_box"
                    android:text="전체 약관 동의"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/use_accept_btn"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark"
                    app:layout_constraintBottom_toBottomOf="@+id/use_accept_btn"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/allCheck" />

                <CheckBox
                    android:id="@+id/use_accept_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/check_box"
                    android:text="이용약관 동의"
                    app:layout_constraintBottom_toTopOf="@+id/user_inf_accept_btn"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/allCheck" />

                <TextView
                    android:id="@+id/use_accept_inf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/text_accept_inf"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toBottomOf="@+id/use_accept_btn"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/use_accept_btn" />

                <CheckBox
                    android:id="@+id/user_inf_accept_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/check_box"
                    android:text="개인정보처리방침"
                    app:layout_constraintBottom_toTopOf="@+id/push_accept_btn"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/use_accept_btn" />

                <TextView
                    android:id="@+id/user_accept_inf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/text_accept_inf"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toBottomOf="@+id/user_inf_accept_btn"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/user_inf_accept_btn" />

                <CheckBox
                    android:id="@+id/push_accept_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/check_box"
                    android:text="이벤트 혜택 알림 수신 동의"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/user_inf_accept_btn" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/border_transparent"
                android:text="@string/text_cancel"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/btn_logIn"
                app:layout_constraintHeight_percent="0.057"
                app:layout_constraintLeft_toLeftOf="@id/guidLine1"
                app:layout_constraintTop_toTopOf="@+id/btn_signUp"
                app:layout_constraintWidth_percent="0.4" />

            <Button
                android:id="@+id/btn_signUp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/border_radius_base"
                android:text="@string/text_signUp"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/guidLine4"
                app:layout_constraintHeight_percent="0.057"
                app:layout_constraintRight_toRightOf="@+id/guidLine2"
                app:layout_constraintTop_toBottomOf="@+id/layout_accept"
                app:layout_constraintWidth_percent="0.4" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>